force-app/main/default/objects/Bike__c/fields/Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quantity__c</fullName>
    <label>Stock Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>